added animation to flips

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="memoryGameApp">
 
 <head>
-    <title>Walmart Memory Game</title>
+    <title>Memory Game</title>
     <link href="assets/libs/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Gamja+Flower" rel="stylesheet">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
@@ -12,8 +12,8 @@
 <body>
     <div class="container-fluid main-content" ng-cloak>
         <div class="row">
-            <div class="col-md-6 col-md-offset-3 col-xs-6 col-xs-offset-3 logo-container">
-                <img class="img-responsive" src="assets/img/walmart-logo-transparent.png">
+            <div class="col-md-12 logo-container">
+                Memory Game
             </div>
         </div>
         <div class="row">
@@ -25,14 +25,14 @@
             </div>
         </div>
     </div>
-    
+
     <script src="assets/libs/jquery/dist/jquery.min.js"></script>
     <script src="assets/libs/angular/angular.min.js"></script>
     <script src="assets/libs/bootstrap/dist/js/bootstrap.min.js"></script>
     <script src="assets/libs/moment/moment.min.js"></script>
     <script src="assets/libs/humanize-duration/humanize-duration.js"></script>
     <script src="assets/libs/angular-resource/angular-resource.min.js"></script>
-    <script src="assets/libs/angular-timer-master/dist/angular-timer.min.js"></script> 
+    <script src="assets/libs/angular-timer-master/dist/angular-timer.min.js"></script>
     <script src="service/memory-game-api-service.js"></script>
     <script src="views/game-modal/game-modal-directive.js"></script>
     <script src="views/timer/timer-directive.js"></script>
